import pkg from 'pg';
const { Client } = pkg;
import format, { ident } from 'pg-format';
// Scripts
import { initTestDatabase, extendDatabase } from '@scripts/mock-data.js';
import { createColumnAndIndex } from '@scripts/create-index.js';
// Main functions
import { searchHandler } from '@/index.js';
// import type { Hooks } from './bundle.types.js';

/**
 * This file is for testing the server side functions
 * Although /scripts are imported here they are not being tested
 * they're used to set the database state for the tests
 */

describe('requestHandler', () => {
  const tableName = 'test_table';
  const initTestDatabaseParams = { tableName, rowCount: 150, fakerSeed: 123 };
  const extendDatabaseParams = {
    facetKeyTable: 'test_facet_key',
    facetValueTable: 'test_facet_value',
    facetValueLookupTable: 'test_facet_value_lookup',
  };

  const defaultExpectedResult = {
    index: tableName,
    hitsPerPage: 20,
    page: 0,
    nbHits: expect.any(Number),
    nbPages: expect.any(Number),
    hits: expect.any(Array),
    facets: expect.any(Object),
    facets_stats: expect.any(Object),
    processingTimeMS: expect.any(Number),
    query: expect.any(String),
    params: expect.any(String),
    exhaustiveFacetsCount: true,
    exhaustiveNbHits: true,
    renderingContent: expect.any(Object),
  };

  const client = new Client();
  client.connect();

  const res = {
    json: jest.fn().mockReturnThis(),
    status: jest.fn().mockReturnThis(),
  };

  let consoleSpy: jest.SpyInstance | undefined;

  const dropTables = async () => {
    // Drop the tables so that the tests can be run independently
    await client.query(
      format(
        `DROP TABLE IF EXISTS %I`,
        extendDatabaseParams.facetValueLookupTable
      )
    );
    await client.query(
      format(`DROP TABLE IF EXISTS %I`, extendDatabaseParams.facetValueTable)
    );
    await client.query(
      format(`DROP TABLE IF EXISTS %I`, extendDatabaseParams.facetKeyTable)
    );
    await client.query(format(`DROP TABLE IF EXISTS %I`, tableName));
  };

  afterEach(async () => {
    res.json.mockClear();
    res.status.mockClear();
    consoleSpy?.mockRestore?.();
  });

  beforeEach(async () => {
    await dropTables();
  });

  afterAll(async () => {
    // await dropTables();
    await client.end();
  });

  /**
   * Test handler returns results
   */

  it('should return results', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const query = 'bespoke keyboard';

    const req = {
      body: {
        requests: [{ params: { query }, indexName: tableName }],
      },
    };

    await searchHandler(req, res);

    // Test status and json are called
    expect(res.status).toHaveBeenCalledWith(200);
    expect(res.json).toHaveBeenCalledWith({
      results: [
        {
          ...defaultExpectedResult,
          nbHits: 4,
          nbPages: 1,
          params: new URLSearchParams(req.body.requests[0].params).toString(),
          query: req.body.requests[0].params.query,
        },
      ],
    });

    // Test hits contained expected object
    expect(res.json.mock.calls[0][0].results[0].hits[0]).toMatchSnapshot();
  });

  it('should return multiple pages', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    /**
     * Page 1
     */

    const params_1 = { query: 'good', page: 0 };
    const req_1 = {
      body: { requests: [{ params: params_1, indexName: tableName }] },
    };
    await searchHandler(req_1, res);

    const expected = {
      results: [
        {
          ...defaultExpectedResult,
          nbHits: 25,
          nbPages: 2,
        },
      ],
    };
    // Test status and json are called
    expect(res.status).toHaveBeenCalledWith(200);
    expect(res.json).toHaveBeenCalledWith(expected);

    /**
     * Page 2
     */

    const params_2 = { query: 'good', page: 1 };
    const req_2 = {
      body: { requests: [{ params: params_2, indexName: tableName }] },
    };
    await searchHandler(req_2, res);

    expected.results[0].page = 1;
    expect(res.json).toHaveBeenCalledWith(expected);
  }, 10_000);

  /**
   * Test page that's out of range
   */

  it('should return empty array', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const req = {
      body: {
        requests: [
          { params: { query: 'good', page: 3 }, indexName: tableName },
        ],
      },
    };
    await searchHandler(req, res);

    // Test status and json are called
    expect(res.status).toHaveBeenCalledWith(200);
    expect(res.json).toHaveBeenCalledWith({
      results: [
        {
          ...defaultExpectedResult,
          hits: [],
          page: 3,
          nbHits: 25,
          nbPages: 2,
        },
      ],
    });
  });

  /**
   * Test excessive pagination returns 400
   */

  it('should return 400', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });
    // Spy on console.log so errors don't pollute the test output
    consoleSpy = jest.spyOn(console, 'error').mockImplementation();

    const req = {
      body: {
        requests: [
          { params: { query: 'good', page: 200 }, indexName: tableName },
        ],
      },
    };
    await searchHandler(req, res);

    // Test status and json are called
    expect(consoleSpy).toHaveBeenCalled();
    expect(res.status).toHaveBeenCalledWith(400);
    expect(res.json).toHaveBeenCalledWith({
      error: 'Request contained invalid payload',
    });

    const req2 = {
      body: {
        requests: [
          {
            params: { query: '', offset: 2500, length: 2500 },
            indexName: tableName,
          },
        ],
      },
    };
    await searchHandler(req2, res);

    expect(consoleSpy).toHaveBeenCalled();
    expect(res.status).toHaveBeenCalledWith(400);
  });

  /**
   * Test sorting by column
   */

  it('should sort by column', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const indexName = `${tableName}?sort=price+asc,name+asc`;
    const indexName2 = `${tableName}?sort=price+desc`;

    const req = {
      body: {
        requests: [
          {
            params: { query: 'good', page: 0 },
            indexName,
          },
          {
            params: { query: 'good', page: 0 },
            indexName: indexName2,
          },
        ],
      },
    };
    await searchHandler(req, res);

    // Test status and json are called
    expect(res.status).toHaveBeenCalledWith(200);
    expect(res.json).toHaveBeenCalledWith({
      results: [
        {
          ...defaultExpectedResult,
          index: indexName,
          nbHits: 25,
        },
        {
          ...defaultExpectedResult,
          index: indexName2,
          nbHits: 25,
        },
      ],
    });

    // Test hits are sorted by price asc
    const hits = res.json.mock.calls[0][0].results[0].hits;
    const prices: number[] = hits.map((hit: { price: number }) => hit.price);
    expect(prices).toEqual(prices.sort((a, b) => a - b));

    // Test hits are sorted by price desc
    const hits2 = res.json.mock.calls[0][0].results[1].hits;
    const prices2: number[] = hits2.map((hit: { price: number }) => hit.price);
    expect([...prices2]).toEqual(prices2.sort((a, b) => b - a));
  });

  it('should handle returning columns', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const req = {
      body: {
        requests: [
          {
            params: {
              query: 'football',
              attributesToRetrieve: ['name', 'description'],
            },
            indexName: tableName,
          },
        ],
      },
    };
    await searchHandler(req, res, [
      {
        indexName: tableName,
        clientValidation: {
          validAttributesToRetrieve: ['name', 'description'],
        },
      },
    ]);

    expect(res.status).toHaveBeenCalledWith(200);
    expect(res.json).toHaveBeenCalled();

    const hits = res.json.mock.calls[0][0].results[0].hits;

    // All hist should only have properties name and description
    hits.forEach((hit: any) => {
      expect(Object.keys(hit)).toEqual(['name', 'description']);
    });

    /**
     * Invalid columns
     */

    // Spy on console.log so errors don't pollute the test output
    consoleSpy = jest.spyOn(console, 'error').mockImplementation();

    await searchHandler(req, res, [
      {
        indexName: tableName,
        clientValidation: {
          validAttributesToRetrieve: ['name'],
        },
      },
    ]);

    // It should have returned an error
    expect(res.status).toHaveBeenCalledWith(400);
    expect(res.json).toHaveBeenCalledWith({
      error: 'Request contained invalid payload',
    });
    expect(consoleSpy).toBeCalledTimes(1);
  });

  it('should handle highlighting', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const req = {
      body: {
        requests: [
          {
            params: {
              query: 'bespoke keyboard',
              page: 0,
              highlightPreTag: '__ais-highlight__',
              highlightPostTag: '__/ais-highlight__',
              attributesToHighlight: ['name', 'description'],
            },
            indexName: tableName,
          },
        ],
      },
    };
    await searchHandler(req, res, [
      {
        indexName: tableName,
        clientValidation: {
          validAttributesToHighlight: ['name', 'description'],
        },
      },
    ]);

    // Test status and json are called
    expect(res.status).toHaveBeenCalledWith(200);
    expect(res.json).toHaveBeenCalled();

    const hits = res.json.mock.calls[0][0].results[0].hits;

    // It should have highlighted both of the query terms
    // in the name and description
    expect(hits[0]).toMatchSnapshot();

    /**
     * Invalid columns
     */

    consoleSpy = jest.spyOn(console, 'error').mockImplementation();

    await searchHandler(req, res, [
      {
        indexName: tableName,
        clientValidation: {
          validAttributesToHighlight: ['name'],
        },
      },
    ]);

    // It should have returned an error
    expect(res.status).toHaveBeenCalledWith(400);
    expect(res.json).toHaveBeenCalledWith({
      error: 'Request contained invalid payload',
    });
    expect(consoleSpy).toBeCalledTimes(1);
  });

  it('should return facets on request with empty query', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    // Facets must be in the request body
    const req = {
      body: {
        requests: [
          {
            params: {
              query: '',
              facets: ['brand', 'price'],
              numericFilters: [],
            },
            indexName: tableName,
          },
        ],
      },
    };

    await searchHandler(req, res, [
      {
        indexName: tableName,
        settings: {
          numericAttributesForFiltering: ['price'],
        },
        clientValidation: {
          validAttributesToHighlight: ['name', 'description'],
          validFacetFilters: ['brand', 'price'],
        },
      },
    ]);

    const results = res.json.mock.calls[0][0].results;
    expect(results[0].facets).toMatchSnapshot();
    expect(results[0].facets_stats).toMatchSnapshot();
  });

  it('should handle filter', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const req = {
      body: {
        requests: [
          {
            params: {
              query: '',
              facetFilters: ['brand:Jacobi LLC', 'brand:-test'],
            },
            indexName: tableName,
          },
          {
            params: {
              query: 'ball',
              numericFilters: ['price>=10', 'price<=20'],
            },
            indexName: `${tableName}?sort=price+asc`,
          },
        ],
      },
    };

    await searchHandler(req, res, [
      {
        indexName: tableName,
        settings: {
          numericAttributesForFiltering: ['price'],
        },
        clientValidation: {
          validFacetFilters: ['brand', 'price'],
        },
      },
    ]);

    // Request1
    const results = res.json.mock.calls[0][0].results;
    expect(results[0].hits[0].brand).toBe('Jacobi LLC');

    // Request2
    const hits = results[1].hits;
    expect(res.status).toHaveBeenCalledWith(200);
    expect(hits.length).toBeGreaterThanOrEqual(2);
    // expect all hits to be between 10 and 20
    hits.forEach((hit: any) => {
      expect(hit.price).toBeGreaterThanOrEqual(10);
      expect(hit.price).toBeLessThanOrEqual(20);
    });
  });

  it('should handle a facet search', async () => {
    // Prerequisites
    await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });

    const req = {
      body: {
        requests: [
          {
            params: { query: '', facetQuery: 'Jac' },
            indexName: tableName,
            type: 'facet',
            facet: 'brand',
          },
        ],
      },
    };

    await searchHandler(req, res);

    const results = res.json.mock.calls[0][0].results;

    expect(results[0].facetHits.length).toBe(4);
    results[0].facetHits.forEach((facetHit: any) => {
      expect(facetHit.brand).toMatch(/Jac/);
      expect(facetHit.count).toBeGreaterThanOrEqual(1);
      expect(facetHit.highlighted).toMatch(
        /__ais-highlight__Jac__\/ais-highlight__/
      );
    });
  });

  it.only('should handle attributesForFaceting from secondary table', async () => {
    // Prerequisites
    const testIds = await initTestDatabase(initTestDatabaseParams);
    await createColumnAndIndex({ tableName });
    const extendResult = await extendDatabase({
      tableName,
      testIds,
      fakerSeed: 123,
      ...extendDatabaseParams,
    });

    expect(extendResult.rows).toMatchSnapshot();

    // console.log(extendResult.rows[0]);

    const req = {
      body: {
        requests: [
          {
            params: {
              query: '',
              // facetFilters: ['color:magenta'],
              facetFilters: [
                ['color:magenta', 'color:blue'],
                'tag:target',
                // 'brand:Jacobi LLC',
                // 'brand:-test',
              ],
              // numericFilters: ['price>=10', 'price<=20'],
            },
            indexName: tableName,
          },
        ],
      },
    };

    await searchHandler(req, res, {
      indexName: tableName,
      settings: {
        attributesForFaceting: ['color', 'tag', 'price', 'brand'],
        numericAttributesForFiltering: ['price'],
      },
      processHooks: (hooks) => {
        hooks.addFilter(
          'filters.skip_WHERE',
          'pg',
          (_value, { attribute }) => ['color', 'tag'].includes(attribute),
          10
        );
        hooks.addFilter(
          'all_selection.after_FROM',
          'pg',
          (value, extra) => {
            // Only filter attributes go here
            const otherTableRefinements = Object.entries(
              extra.refinements
            ).filter(([key, value]) => ['color', 'tag'].includes(key));

            const sql = otherTableRefinements
              .map(([attribute, type]) => {
                return /* sql */ `
              INNER JOIN test_facet_value_lookup l_${attribute} 
                ON t.id = l_${attribute}.test_table_id

                AND l_${attribute}.facet_key_id = (
                  SELECT id FROM test_facet_key 
                  WHERE name = '${attribute}'
                )

                AND l_${attribute}.facet_value_id IN (
                  SELECT id FROM test_facet_value 
                  WHERE facet_key_id = l_${attribute}.facet_key_id 
                  AND ${extra.typesToString({ attribute: 'name', type })})
              `;
              })
              .join(' ');

            return value + sql;
          },
          10
        );
        hooks.addFilter(
          'hits_selection.in_SELECT',
          'pg',
          (value, extra) => {
            // All attributes in other table go here
            const sql = ['color', 'tag']
              .map((attribute) => {
                return /* sql */ `
                (
                  SELECT array_agg(v.name) AS names
                  FROM test_facet_value_lookup l
                  INNER JOIN test_facet_value v        ON l.facet_value_id = v.id
                  INNER JOIN test_facet_key   k        ON l.facet_key_id   = k.id

                  WHERE l.test_table_id = 1 AND k.name = '${attribute}'
                  GROUP BY k.id
                ) AS ${attribute}
                `;
              })
              .join(', ');

            return value + ',' + sql;
          },
          10
        );
        hooks.addFilter('facets.cte', 'pg', (sql, facet) => {
          // All attributes in other table go here
          if (!['color', 'tag'].includes(facet)) return sql;

          return /* sql */ `
            ${facet}_selection AS (
              SELECT coalesce( 
                json_object_agg( name, cnt ORDER BY cnt DESC ), 
                '{}'::json
              ) as details
                FROM (
                  SELECT v.name , count(*) AS cnt
                  FROM test_table t
                  INNER JOIN test_facet_value_lookup l ON t.id = l.test_table_id
                  INNER JOIN test_facet_value v        ON l.facet_value_id = v.id
                  INNER JOIN test_facet_key   k        ON l.facet_key_id   = k.id
                  WHERE k.name = '${facet}'
                  GROUP by v.name
                  ORDER BY count(*) DESC 
                  LIMIT 10
                ) t
            )
          `;
        });

        return;
      },
    });

    // Request1
    const results = res.json.mock.calls[0][0].results;

    console.log(results[0].hits[0]);

    // expect(results[0].hits[0].brand).toBe('Jacobi LLC');
  });
});
