// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestHandler should handle attributesForFaceting from secondary table 1`] = `
[
  {
    "facet_key": "color",
    "facet_value_id": "magenta",
    "fk_id": 1,
    "fv_id": 1,
    "id": 1,
    "name": "Handcrafted Metal Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "visualize",
    "fk_id": 2,
    "fv_id": 32,
    "id": 1,
    "name": "Handcrafted Metal Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "repurpose",
    "fk_id": 2,
    "fv_id": 33,
    "id": 1,
    "name": "Handcrafted Metal Ball",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lime",
    "fk_id": 1,
    "fv_id": 2,
    "id": 2,
    "name": "Handcrafted Granite Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "repurpose",
    "fk_id": 2,
    "fv_id": 33,
    "id": 2,
    "name": "Handcrafted Granite Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "empower",
    "fk_id": 2,
    "fv_id": 34,
    "id": 2,
    "name": "Handcrafted Granite Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "black",
    "fk_id": 1,
    "fv_id": 3,
    "id": 3,
    "name": "Practical Metal Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "empower",
    "fk_id": 2,
    "fv_id": 34,
    "id": 3,
    "name": "Practical Metal Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "strategize",
    "fk_id": 2,
    "fv_id": 35,
    "id": 3,
    "name": "Practical Metal Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "violet",
    "fk_id": 1,
    "fv_id": 4,
    "id": 4,
    "name": "Generic Metal Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "strategize",
    "fk_id": 2,
    "fv_id": 35,
    "id": 4,
    "name": "Generic Metal Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "architect",
    "fk_id": 2,
    "fv_id": 36,
    "id": 4,
    "name": "Generic Metal Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "white",
    "fk_id": 1,
    "fv_id": 5,
    "id": 5,
    "name": "Awesome Metal Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "architect",
    "fk_id": 2,
    "fv_id": 36,
    "id": 5,
    "name": "Awesome Metal Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "mesh",
    "fk_id": 2,
    "fv_id": 37,
    "id": 5,
    "name": "Awesome Metal Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "salmon",
    "fk_id": 1,
    "fv_id": 6,
    "id": 6,
    "name": "Handmade Granite Table",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "mesh",
    "fk_id": 2,
    "fv_id": 37,
    "id": 6,
    "name": "Handmade Granite Table",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "innovate",
    "fk_id": 2,
    "fv_id": 38,
    "id": 6,
    "name": "Handmade Granite Table",
  },
  {
    "facet_key": "color",
    "facet_value_id": "tan",
    "fk_id": 1,
    "fv_id": 7,
    "id": 7,
    "name": "Awesome Plastic Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "innovate",
    "fk_id": 2,
    "fv_id": 38,
    "id": 7,
    "name": "Awesome Plastic Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "target",
    "fk_id": 2,
    "fv_id": 39,
    "id": 7,
    "name": "Awesome Plastic Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "indigo",
    "fk_id": 1,
    "fv_id": 8,
    "id": 8,
    "name": "Gorgeous Wooden Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "target",
    "fk_id": 2,
    "fv_id": 39,
    "id": 8,
    "name": "Gorgeous Wooden Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "drive",
    "fk_id": 2,
    "fv_id": 40,
    "id": 8,
    "name": "Gorgeous Wooden Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "silver",
    "fk_id": 1,
    "fv_id": 9,
    "id": 9,
    "name": "Small Cotton Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "drive",
    "fk_id": 2,
    "fv_id": 40,
    "id": 9,
    "name": "Small Cotton Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "redefine",
    "fk_id": 2,
    "fv_id": 41,
    "id": 9,
    "name": "Small Cotton Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "maroon",
    "fk_id": 1,
    "fv_id": 10,
    "id": 10,
    "name": "Refined Cotton Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "redefine",
    "fk_id": 2,
    "fv_id": 41,
    "id": 10,
    "name": "Refined Cotton Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synergize",
    "fk_id": 2,
    "fv_id": 42,
    "id": 10,
    "name": "Refined Cotton Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "turquoise",
    "fk_id": 1,
    "fv_id": 11,
    "id": 11,
    "name": "Awesome Granite Computer",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synergize",
    "fk_id": 2,
    "fv_id": 42,
    "id": 11,
    "name": "Awesome Granite Computer",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incubate",
    "fk_id": 2,
    "fv_id": 43,
    "id": 11,
    "name": "Awesome Granite Computer",
  },
  {
    "facet_key": "color",
    "facet_value_id": "purple",
    "fk_id": 1,
    "fv_id": 12,
    "id": 12,
    "name": "Recycled Plastic Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incubate",
    "fk_id": 2,
    "fv_id": 43,
    "id": 12,
    "name": "Recycled Plastic Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "grow",
    "fk_id": 2,
    "fv_id": 44,
    "id": 12,
    "name": "Recycled Plastic Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "pink",
    "fk_id": 1,
    "fv_id": 13,
    "id": 13,
    "name": "Recycled Frozen Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "grow",
    "fk_id": 2,
    "fv_id": 44,
    "id": 13,
    "name": "Recycled Frozen Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enable",
    "fk_id": 2,
    "fv_id": 45,
    "id": 13,
    "name": "Recycled Frozen Bike",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orchid",
    "fk_id": 1,
    "fv_id": 14,
    "id": 14,
    "name": "Recycled Soft Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enable",
    "fk_id": 2,
    "fv_id": 45,
    "id": 14,
    "name": "Recycled Soft Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "disintermediate",
    "fk_id": 2,
    "fv_id": 46,
    "id": 14,
    "name": "Recycled Soft Bacon",
  },
  {
    "facet_key": "color",
    "facet_value_id": "green",
    "fk_id": 1,
    "fv_id": 15,
    "id": 15,
    "name": "Small Concrete Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "disintermediate",
    "fk_id": 2,
    "fv_id": 46,
    "id": 15,
    "name": "Small Concrete Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "harness",
    "fk_id": 2,
    "fv_id": 47,
    "id": 15,
    "name": "Small Concrete Pants",
  },
  {
    "facet_key": "color",
    "facet_value_id": "plum",
    "fk_id": 1,
    "fv_id": 16,
    "id": 16,
    "name": "Sleek Cotton Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "harness",
    "fk_id": 2,
    "fv_id": 47,
    "id": 16,
    "name": "Sleek Cotton Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "benchmark",
    "fk_id": 2,
    "fv_id": 48,
    "id": 16,
    "name": "Sleek Cotton Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "mint green",
    "fk_id": 1,
    "fv_id": 17,
    "id": 17,
    "name": "Sleek Fresh Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "benchmark",
    "fk_id": 2,
    "fv_id": 48,
    "id": 17,
    "name": "Sleek Fresh Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "monetize",
    "fk_id": 2,
    "fv_id": 49,
    "id": 17,
    "name": "Sleek Fresh Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "blue",
    "fk_id": 1,
    "fv_id": 18,
    "id": 18,
    "name": "Intelligent Cotton Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "monetize",
    "fk_id": 2,
    "fv_id": 49,
    "id": 18,
    "name": "Intelligent Cotton Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deploy",
    "fk_id": 2,
    "fv_id": 50,
    "id": 18,
    "name": "Intelligent Cotton Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "sky blue",
    "fk_id": 1,
    "fv_id": 19,
    "id": 19,
    "name": "Generic Frozen Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deploy",
    "fk_id": 2,
    "fv_id": 50,
    "id": 19,
    "name": "Generic Frozen Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enhance",
    "fk_id": 2,
    "fv_id": 51,
    "id": 19,
    "name": "Generic Frozen Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orange",
    "fk_id": 1,
    "fv_id": 20,
    "id": 20,
    "name": "Bespoke Granite Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enhance",
    "fk_id": 2,
    "fv_id": 51,
    "id": 20,
    "name": "Bespoke Granite Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "streamline",
    "fk_id": 2,
    "fv_id": 52,
    "id": 20,
    "name": "Bespoke Granite Keyboard",
  },
  {
    "facet_key": "color",
    "facet_value_id": "fuchsia",
    "fk_id": 1,
    "fv_id": 21,
    "id": 21,
    "name": "Sleek Metal Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "streamline",
    "fk_id": 2,
    "fv_id": 52,
    "id": 21,
    "name": "Sleek Metal Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engage",
    "fk_id": 2,
    "fv_id": 53,
    "id": 21,
    "name": "Sleek Metal Salad",
  },
  {
    "facet_key": "color",
    "facet_value_id": "grey",
    "fk_id": 1,
    "fv_id": 22,
    "id": 22,
    "name": "Practical Plastic Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engage",
    "fk_id": 2,
    "fv_id": 53,
    "id": 22,
    "name": "Practical Plastic Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "scale",
    "fk_id": 2,
    "fv_id": 54,
    "id": 22,
    "name": "Practical Plastic Sausages",
  },
  {
    "facet_key": "color",
    "facet_value_id": "olive",
    "fk_id": 1,
    "fv_id": 23,
    "id": 23,
    "name": "Gorgeous Concrete Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "scale",
    "fk_id": 2,
    "fv_id": 54,
    "id": 23,
    "name": "Gorgeous Concrete Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "leverage",
    "fk_id": 2,
    "fv_id": 55,
    "id": 23,
    "name": "Gorgeous Concrete Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "ivory",
    "fk_id": 1,
    "fv_id": 24,
    "id": 24,
    "name": "Fantastic Rubber Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "leverage",
    "fk_id": 2,
    "fv_id": 55,
    "id": 24,
    "name": "Fantastic Rubber Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "evolve",
    "fk_id": 2,
    "fv_id": 56,
    "id": 24,
    "name": "Fantastic Rubber Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "red",
    "fk_id": 1,
    "fv_id": 25,
    "id": 25,
    "name": "Rustic Concrete Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "evolve",
    "fk_id": 2,
    "fv_id": 56,
    "id": 25,
    "name": "Rustic Concrete Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synthesize",
    "fk_id": 2,
    "fv_id": 57,
    "id": 25,
    "name": "Rustic Concrete Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "cyan",
    "fk_id": 1,
    "fv_id": 26,
    "id": 26,
    "name": "Sleek Steel Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synthesize",
    "fk_id": 2,
    "fv_id": 57,
    "id": 26,
    "name": "Sleek Steel Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "expedite",
    "fk_id": 2,
    "fv_id": 58,
    "id": 26,
    "name": "Sleek Steel Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lavender",
    "fk_id": 1,
    "fv_id": 27,
    "id": 27,
    "name": "Elegant Cotton Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "expedite",
    "fk_id": 2,
    "fv_id": 58,
    "id": 27,
    "name": "Elegant Cotton Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "generate",
    "fk_id": 2,
    "fv_id": 59,
    "id": 27,
    "name": "Elegant Cotton Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "yellow",
    "fk_id": 1,
    "fv_id": 28,
    "id": 28,
    "name": "Luxurious Granite Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "generate",
    "fk_id": 2,
    "fv_id": 59,
    "id": 28,
    "name": "Luxurious Granite Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "maximize",
    "fk_id": 2,
    "fv_id": 60,
    "id": 28,
    "name": "Luxurious Granite Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "azure",
    "fk_id": 1,
    "fv_id": 29,
    "id": 29,
    "name": "Modern Soft Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "maximize",
    "fk_id": 2,
    "fv_id": 60,
    "id": 29,
    "name": "Modern Soft Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "facilitate",
    "fk_id": 2,
    "fv_id": 61,
    "id": 29,
    "name": "Modern Soft Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "gold",
    "fk_id": 1,
    "fv_id": 30,
    "id": 30,
    "name": "Bespoke Granite Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "facilitate",
    "fk_id": 2,
    "fv_id": 61,
    "id": 30,
    "name": "Bespoke Granite Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reintermediate",
    "fk_id": 2,
    "fv_id": 62,
    "id": 30,
    "name": "Bespoke Granite Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "teal",
    "fk_id": 1,
    "fv_id": 31,
    "id": 31,
    "name": "Intelligent Granite Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reintermediate",
    "fk_id": 2,
    "fv_id": 62,
    "id": 31,
    "name": "Intelligent Granite Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "seize",
    "fk_id": 2,
    "fv_id": 63,
    "id": 31,
    "name": "Intelligent Granite Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "magenta",
    "fk_id": 1,
    "fv_id": 1,
    "id": 32,
    "name": "Incredible Fresh Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "seize",
    "fk_id": 2,
    "fv_id": 63,
    "id": 32,
    "name": "Incredible Fresh Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "recontextualize",
    "fk_id": 2,
    "fv_id": 64,
    "id": 32,
    "name": "Incredible Fresh Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lime",
    "fk_id": 1,
    "fv_id": 2,
    "id": 33,
    "name": "Sleek Soft Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "recontextualize",
    "fk_id": 2,
    "fv_id": 64,
    "id": 33,
    "name": "Sleek Soft Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "unleash",
    "fk_id": 2,
    "fv_id": 65,
    "id": 33,
    "name": "Sleek Soft Pants",
  },
  {
    "facet_key": "color",
    "facet_value_id": "black",
    "fk_id": 1,
    "fv_id": 3,
    "id": 34,
    "name": "Awesome Frozen Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "unleash",
    "fk_id": 2,
    "fv_id": 65,
    "id": 34,
    "name": "Awesome Frozen Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "utilize",
    "fk_id": 2,
    "fv_id": 66,
    "id": 34,
    "name": "Awesome Frozen Pizza",
  },
  {
    "facet_key": "color",
    "facet_value_id": "violet",
    "fk_id": 1,
    "fv_id": 4,
    "id": 35,
    "name": "Small Wooden Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "utilize",
    "fk_id": 2,
    "fv_id": 66,
    "id": 35,
    "name": "Small Wooden Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "orchestrate",
    "fk_id": 2,
    "fv_id": 67,
    "id": 35,
    "name": "Small Wooden Salad",
  },
  {
    "facet_key": "color",
    "facet_value_id": "white",
    "fk_id": 1,
    "fv_id": 5,
    "id": 36,
    "name": "Small Concrete Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "orchestrate",
    "fk_id": 2,
    "fv_id": 67,
    "id": 36,
    "name": "Small Concrete Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "optimize",
    "fk_id": 2,
    "fv_id": 68,
    "id": 36,
    "name": "Small Concrete Bacon",
  },
  {
    "facet_key": "color",
    "facet_value_id": "salmon",
    "fk_id": 1,
    "fv_id": 6,
    "id": 37,
    "name": "Ergonomic Soft Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "optimize",
    "fk_id": 2,
    "fv_id": 68,
    "id": 37,
    "name": "Ergonomic Soft Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "envisioneer",
    "fk_id": 2,
    "fv_id": 69,
    "id": 37,
    "name": "Ergonomic Soft Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "tan",
    "fk_id": 1,
    "fv_id": 7,
    "id": 38,
    "name": "Incredible Fresh Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "envisioneer",
    "fk_id": 2,
    "fv_id": 69,
    "id": 38,
    "name": "Incredible Fresh Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "e-enable",
    "fk_id": 2,
    "fv_id": 70,
    "id": 38,
    "name": "Incredible Fresh Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "indigo",
    "fk_id": 1,
    "fv_id": 8,
    "id": 39,
    "name": "Elegant Frozen Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "e-enable",
    "fk_id": 2,
    "fv_id": 70,
    "id": 39,
    "name": "Elegant Frozen Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "matrix",
    "fk_id": 2,
    "fv_id": 71,
    "id": 39,
    "name": "Elegant Frozen Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "silver",
    "fk_id": 1,
    "fv_id": 9,
    "id": 40,
    "name": "Refined Granite Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "matrix",
    "fk_id": 2,
    "fv_id": 71,
    "id": 40,
    "name": "Refined Granite Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "syndicate",
    "fk_id": 2,
    "fv_id": 72,
    "id": 40,
    "name": "Refined Granite Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "maroon",
    "fk_id": 1,
    "fv_id": 10,
    "id": 41,
    "name": "Oriental Rubber Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "syndicate",
    "fk_id": 2,
    "fv_id": 72,
    "id": 41,
    "name": "Oriental Rubber Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "brand",
    "fk_id": 2,
    "fv_id": 73,
    "id": 41,
    "name": "Oriental Rubber Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "turquoise",
    "fk_id": 1,
    "fv_id": 11,
    "id": 42,
    "name": "Refined Granite Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "brand",
    "fk_id": 2,
    "fv_id": 73,
    "id": 42,
    "name": "Refined Granite Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transform",
    "fk_id": 2,
    "fv_id": 74,
    "id": 42,
    "name": "Refined Granite Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "purple",
    "fk_id": 1,
    "fv_id": 12,
    "id": 43,
    "name": "Ergonomic Soft Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transform",
    "fk_id": 2,
    "fv_id": 74,
    "id": 43,
    "name": "Ergonomic Soft Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "whiteboard",
    "fk_id": 2,
    "fv_id": 75,
    "id": 43,
    "name": "Ergonomic Soft Keyboard",
  },
  {
    "facet_key": "color",
    "facet_value_id": "pink",
    "fk_id": 1,
    "fv_id": 13,
    "id": 44,
    "name": "Luxurious Wooden Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "whiteboard",
    "fk_id": 2,
    "fv_id": 75,
    "id": 44,
    "name": "Luxurious Wooden Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "exploit",
    "fk_id": 2,
    "fv_id": 76,
    "id": 44,
    "name": "Luxurious Wooden Bacon",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orchid",
    "fk_id": 1,
    "fv_id": 14,
    "id": 45,
    "name": "Recycled Bronze Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "exploit",
    "fk_id": 2,
    "fv_id": 76,
    "id": 45,
    "name": "Recycled Bronze Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "cultivate",
    "fk_id": 2,
    "fv_id": 77,
    "id": 45,
    "name": "Recycled Bronze Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "green",
    "fk_id": 1,
    "fv_id": 15,
    "id": 46,
    "name": "Modern Bronze Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "cultivate",
    "fk_id": 2,
    "fv_id": 77,
    "id": 46,
    "name": "Modern Bronze Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incentivize",
    "fk_id": 2,
    "fv_id": 78,
    "id": 46,
    "name": "Modern Bronze Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "plum",
    "fk_id": 1,
    "fv_id": 16,
    "id": 47,
    "name": "Licensed Fresh Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incentivize",
    "fk_id": 2,
    "fv_id": 78,
    "id": 47,
    "name": "Licensed Fresh Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "embrace",
    "fk_id": 2,
    "fv_id": 79,
    "id": 47,
    "name": "Licensed Fresh Chair",
  },
  {
    "facet_key": "color",
    "facet_value_id": "mint green",
    "fk_id": 1,
    "fv_id": 17,
    "id": 48,
    "name": "Bespoke Cotton Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "embrace",
    "fk_id": 2,
    "fv_id": 79,
    "id": 48,
    "name": "Bespoke Cotton Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "revolutionize",
    "fk_id": 2,
    "fv_id": 80,
    "id": 48,
    "name": "Bespoke Cotton Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "blue",
    "fk_id": 1,
    "fv_id": 18,
    "id": 49,
    "name": "Handcrafted Soft Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "revolutionize",
    "fk_id": 2,
    "fv_id": 80,
    "id": 49,
    "name": "Handcrafted Soft Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "extend",
    "fk_id": 2,
    "fv_id": 81,
    "id": 49,
    "name": "Handcrafted Soft Chair",
  },
  {
    "facet_key": "color",
    "facet_value_id": "sky blue",
    "fk_id": 1,
    "fv_id": 19,
    "id": 50,
    "name": "Handmade Plastic Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "extend",
    "fk_id": 2,
    "fv_id": 81,
    "id": 50,
    "name": "Handmade Plastic Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "morph",
    "fk_id": 2,
    "fv_id": 82,
    "id": 50,
    "name": "Handmade Plastic Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orange",
    "fk_id": 1,
    "fv_id": 20,
    "id": 51,
    "name": "Ergonomic Rubber Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "morph",
    "fk_id": 2,
    "fv_id": 82,
    "id": 51,
    "name": "Ergonomic Rubber Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deliver",
    "fk_id": 2,
    "fv_id": 83,
    "id": 51,
    "name": "Ergonomic Rubber Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "fuchsia",
    "fk_id": 1,
    "fv_id": 21,
    "id": 52,
    "name": "Oriental Granite Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deliver",
    "fk_id": 2,
    "fv_id": 83,
    "id": 52,
    "name": "Oriental Granite Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "implement",
    "fk_id": 2,
    "fv_id": 84,
    "id": 52,
    "name": "Oriental Granite Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "grey",
    "fk_id": 1,
    "fv_id": 22,
    "id": 53,
    "name": "Generic Frozen Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "implement",
    "fk_id": 2,
    "fv_id": 84,
    "id": 53,
    "name": "Generic Frozen Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transition",
    "fk_id": 2,
    "fv_id": 85,
    "id": 53,
    "name": "Generic Frozen Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "olive",
    "fk_id": 1,
    "fv_id": 23,
    "id": 54,
    "name": "Modern Plastic Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transition",
    "fk_id": 2,
    "fv_id": 85,
    "id": 54,
    "name": "Modern Plastic Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reinvent",
    "fk_id": 2,
    "fv_id": 86,
    "id": 54,
    "name": "Modern Plastic Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "ivory",
    "fk_id": 1,
    "fv_id": 24,
    "id": 55,
    "name": "Intelligent Rubber Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reinvent",
    "fk_id": 2,
    "fv_id": 86,
    "id": 55,
    "name": "Intelligent Rubber Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "aggregate",
    "fk_id": 2,
    "fv_id": 87,
    "id": 55,
    "name": "Intelligent Rubber Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "red",
    "fk_id": 1,
    "fv_id": 25,
    "id": 56,
    "name": "Electronic Frozen Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "aggregate",
    "fk_id": 2,
    "fv_id": 87,
    "id": 56,
    "name": "Electronic Frozen Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "iterate",
    "fk_id": 2,
    "fv_id": 88,
    "id": 56,
    "name": "Electronic Frozen Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "cyan",
    "fk_id": 1,
    "fv_id": 26,
    "id": 57,
    "name": "Electronic Rubber Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "iterate",
    "fk_id": 2,
    "fv_id": 88,
    "id": 57,
    "name": "Electronic Rubber Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "integrate",
    "fk_id": 2,
    "fv_id": 89,
    "id": 57,
    "name": "Electronic Rubber Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lavender",
    "fk_id": 1,
    "fv_id": 27,
    "id": 58,
    "name": "Ergonomic Bronze Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "integrate",
    "fk_id": 2,
    "fv_id": 89,
    "id": 58,
    "name": "Ergonomic Bronze Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engineer",
    "fk_id": 2,
    "fv_id": 90,
    "id": 58,
    "name": "Ergonomic Bronze Bike",
  },
  {
    "facet_key": "color",
    "facet_value_id": "yellow",
    "fk_id": 1,
    "fv_id": 28,
    "id": 59,
    "name": "Licensed Concrete Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engineer",
    "fk_id": 2,
    "fv_id": 90,
    "id": 59,
    "name": "Licensed Concrete Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "visualize",
    "fk_id": 2,
    "fv_id": 32,
    "id": 59,
    "name": "Licensed Concrete Salad",
  },
  {
    "facet_key": "color",
    "facet_value_id": "azure",
    "fk_id": 1,
    "fv_id": 29,
    "id": 60,
    "name": "Tasty Soft Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "visualize",
    "fk_id": 2,
    "fv_id": 32,
    "id": 60,
    "name": "Tasty Soft Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "repurpose",
    "fk_id": 2,
    "fv_id": 33,
    "id": 60,
    "name": "Tasty Soft Hat",
  },
  {
    "facet_key": "color",
    "facet_value_id": "gold",
    "fk_id": 1,
    "fv_id": 30,
    "id": 61,
    "name": "Recycled Soft Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "repurpose",
    "fk_id": 2,
    "fv_id": 33,
    "id": 61,
    "name": "Recycled Soft Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "empower",
    "fk_id": 2,
    "fv_id": 34,
    "id": 61,
    "name": "Recycled Soft Chips",
  },
  {
    "facet_key": "color",
    "facet_value_id": "teal",
    "fk_id": 1,
    "fv_id": 31,
    "id": 62,
    "name": "Ergonomic Bronze Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "empower",
    "fk_id": 2,
    "fv_id": 34,
    "id": 62,
    "name": "Ergonomic Bronze Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "strategize",
    "fk_id": 2,
    "fv_id": 35,
    "id": 62,
    "name": "Ergonomic Bronze Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "magenta",
    "fk_id": 1,
    "fv_id": 1,
    "id": 63,
    "name": "Licensed Bronze Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "strategize",
    "fk_id": 2,
    "fv_id": 35,
    "id": 63,
    "name": "Licensed Bronze Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "architect",
    "fk_id": 2,
    "fv_id": 36,
    "id": 63,
    "name": "Licensed Bronze Bacon",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lime",
    "fk_id": 1,
    "fv_id": 2,
    "id": 64,
    "name": "Handmade Concrete Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "architect",
    "fk_id": 2,
    "fv_id": 36,
    "id": 64,
    "name": "Handmade Concrete Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "mesh",
    "fk_id": 2,
    "fv_id": 37,
    "id": 64,
    "name": "Handmade Concrete Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "black",
    "fk_id": 1,
    "fv_id": 3,
    "id": 65,
    "name": "Generic Metal Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "mesh",
    "fk_id": 2,
    "fv_id": 37,
    "id": 65,
    "name": "Generic Metal Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "innovate",
    "fk_id": 2,
    "fv_id": 38,
    "id": 65,
    "name": "Generic Metal Pizza",
  },
  {
    "facet_key": "color",
    "facet_value_id": "violet",
    "fk_id": 1,
    "fv_id": 4,
    "id": 66,
    "name": "Practical Steel Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "innovate",
    "fk_id": 2,
    "fv_id": 38,
    "id": 66,
    "name": "Practical Steel Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "target",
    "fk_id": 2,
    "fv_id": 39,
    "id": 66,
    "name": "Practical Steel Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "white",
    "fk_id": 1,
    "fv_id": 5,
    "id": 67,
    "name": "Elegant Wooden Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "target",
    "fk_id": 2,
    "fv_id": 39,
    "id": 67,
    "name": "Elegant Wooden Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "drive",
    "fk_id": 2,
    "fv_id": 40,
    "id": 67,
    "name": "Elegant Wooden Chips",
  },
  {
    "facet_key": "color",
    "facet_value_id": "salmon",
    "fk_id": 1,
    "fv_id": 6,
    "id": 68,
    "name": "Practical Rubber Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "drive",
    "fk_id": 2,
    "fv_id": 40,
    "id": 68,
    "name": "Practical Rubber Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "redefine",
    "fk_id": 2,
    "fv_id": 41,
    "id": 68,
    "name": "Practical Rubber Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "tan",
    "fk_id": 1,
    "fv_id": 7,
    "id": 69,
    "name": "Tasty Plastic Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "redefine",
    "fk_id": 2,
    "fv_id": 41,
    "id": 69,
    "name": "Tasty Plastic Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synergize",
    "fk_id": 2,
    "fv_id": 42,
    "id": 69,
    "name": "Tasty Plastic Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "indigo",
    "fk_id": 1,
    "fv_id": 8,
    "id": 70,
    "name": "Modern Concrete Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synergize",
    "fk_id": 2,
    "fv_id": 42,
    "id": 70,
    "name": "Modern Concrete Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incubate",
    "fk_id": 2,
    "fv_id": 43,
    "id": 70,
    "name": "Modern Concrete Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "silver",
    "fk_id": 1,
    "fv_id": 9,
    "id": 71,
    "name": "Generic Steel Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incubate",
    "fk_id": 2,
    "fv_id": 43,
    "id": 71,
    "name": "Generic Steel Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "grow",
    "fk_id": 2,
    "fv_id": 44,
    "id": 71,
    "name": "Generic Steel Sausages",
  },
  {
    "facet_key": "color",
    "facet_value_id": "maroon",
    "fk_id": 1,
    "fv_id": 10,
    "id": 72,
    "name": "Oriental Fresh Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "grow",
    "fk_id": 2,
    "fv_id": 44,
    "id": 72,
    "name": "Oriental Fresh Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enable",
    "fk_id": 2,
    "fv_id": 45,
    "id": 72,
    "name": "Oriental Fresh Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "turquoise",
    "fk_id": 1,
    "fv_id": 11,
    "id": 73,
    "name": "Luxurious Soft Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enable",
    "fk_id": 2,
    "fv_id": 45,
    "id": 73,
    "name": "Luxurious Soft Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "disintermediate",
    "fk_id": 2,
    "fv_id": 46,
    "id": 73,
    "name": "Luxurious Soft Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "purple",
    "fk_id": 1,
    "fv_id": 12,
    "id": 74,
    "name": "Handcrafted Plastic Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "disintermediate",
    "fk_id": 2,
    "fv_id": 46,
    "id": 74,
    "name": "Handcrafted Plastic Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "harness",
    "fk_id": 2,
    "fv_id": 47,
    "id": 74,
    "name": "Handcrafted Plastic Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "pink",
    "fk_id": 1,
    "fv_id": 13,
    "id": 75,
    "name": "Generic Soft Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "harness",
    "fk_id": 2,
    "fv_id": 47,
    "id": 75,
    "name": "Generic Soft Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "benchmark",
    "fk_id": 2,
    "fv_id": 48,
    "id": 75,
    "name": "Generic Soft Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orchid",
    "fk_id": 1,
    "fv_id": 14,
    "id": 76,
    "name": "Incredible Steel Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "benchmark",
    "fk_id": 2,
    "fv_id": 48,
    "id": 76,
    "name": "Incredible Steel Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "monetize",
    "fk_id": 2,
    "fv_id": 49,
    "id": 76,
    "name": "Incredible Steel Hat",
  },
  {
    "facet_key": "color",
    "facet_value_id": "green",
    "fk_id": 1,
    "fv_id": 15,
    "id": 77,
    "name": "Fantastic Wooden Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "monetize",
    "fk_id": 2,
    "fv_id": 49,
    "id": 77,
    "name": "Fantastic Wooden Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deploy",
    "fk_id": 2,
    "fv_id": 50,
    "id": 77,
    "name": "Fantastic Wooden Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "plum",
    "fk_id": 1,
    "fv_id": 16,
    "id": 78,
    "name": "Handmade Granite Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deploy",
    "fk_id": 2,
    "fv_id": 50,
    "id": 78,
    "name": "Handmade Granite Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enhance",
    "fk_id": 2,
    "fv_id": 51,
    "id": 78,
    "name": "Handmade Granite Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "mint green",
    "fk_id": 1,
    "fv_id": 17,
    "id": 79,
    "name": "Gorgeous Concrete Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enhance",
    "fk_id": 2,
    "fv_id": 51,
    "id": 79,
    "name": "Gorgeous Concrete Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "streamline",
    "fk_id": 2,
    "fv_id": 52,
    "id": 79,
    "name": "Gorgeous Concrete Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "blue",
    "fk_id": 1,
    "fv_id": 18,
    "id": 80,
    "name": "Recycled Rubber Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "streamline",
    "fk_id": 2,
    "fv_id": 52,
    "id": 80,
    "name": "Recycled Rubber Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engage",
    "fk_id": 2,
    "fv_id": 53,
    "id": 80,
    "name": "Recycled Rubber Chair",
  },
  {
    "facet_key": "color",
    "facet_value_id": "sky blue",
    "fk_id": 1,
    "fv_id": 19,
    "id": 81,
    "name": "Generic Steel Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engage",
    "fk_id": 2,
    "fv_id": 53,
    "id": 81,
    "name": "Generic Steel Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "scale",
    "fk_id": 2,
    "fv_id": 54,
    "id": 81,
    "name": "Generic Steel Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orange",
    "fk_id": 1,
    "fv_id": 20,
    "id": 82,
    "name": "Unbranded Metal Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "scale",
    "fk_id": 2,
    "fv_id": 54,
    "id": 82,
    "name": "Unbranded Metal Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "leverage",
    "fk_id": 2,
    "fv_id": 55,
    "id": 82,
    "name": "Unbranded Metal Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "fuchsia",
    "fk_id": 1,
    "fv_id": 21,
    "id": 83,
    "name": "Sleek Fresh Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "leverage",
    "fk_id": 2,
    "fv_id": 55,
    "id": 83,
    "name": "Sleek Fresh Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "evolve",
    "fk_id": 2,
    "fv_id": 56,
    "id": 83,
    "name": "Sleek Fresh Chips",
  },
  {
    "facet_key": "color",
    "facet_value_id": "grey",
    "fk_id": 1,
    "fv_id": 22,
    "id": 84,
    "name": "Refined Granite Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "evolve",
    "fk_id": 2,
    "fv_id": 56,
    "id": 84,
    "name": "Refined Granite Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synthesize",
    "fk_id": 2,
    "fv_id": 57,
    "id": 84,
    "name": "Refined Granite Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "olive",
    "fk_id": 1,
    "fv_id": 23,
    "id": 85,
    "name": "Refined Plastic Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synthesize",
    "fk_id": 2,
    "fv_id": 57,
    "id": 85,
    "name": "Refined Plastic Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "expedite",
    "fk_id": 2,
    "fv_id": 58,
    "id": 85,
    "name": "Refined Plastic Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "ivory",
    "fk_id": 1,
    "fv_id": 24,
    "id": 86,
    "name": "Electronic Frozen Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "expedite",
    "fk_id": 2,
    "fv_id": 58,
    "id": 86,
    "name": "Electronic Frozen Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "generate",
    "fk_id": 2,
    "fv_id": 59,
    "id": 86,
    "name": "Electronic Frozen Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "red",
    "fk_id": 1,
    "fv_id": 25,
    "id": 87,
    "name": "Refined Concrete Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "generate",
    "fk_id": 2,
    "fv_id": 59,
    "id": 87,
    "name": "Refined Concrete Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "maximize",
    "fk_id": 2,
    "fv_id": 60,
    "id": 87,
    "name": "Refined Concrete Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "cyan",
    "fk_id": 1,
    "fv_id": 26,
    "id": 88,
    "name": "Practical Fresh Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "maximize",
    "fk_id": 2,
    "fv_id": 60,
    "id": 88,
    "name": "Practical Fresh Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "facilitate",
    "fk_id": 2,
    "fv_id": 61,
    "id": 88,
    "name": "Practical Fresh Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lavender",
    "fk_id": 1,
    "fv_id": 27,
    "id": 89,
    "name": "Modern Fresh Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "facilitate",
    "fk_id": 2,
    "fv_id": 61,
    "id": 89,
    "name": "Modern Fresh Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reintermediate",
    "fk_id": 2,
    "fv_id": 62,
    "id": 89,
    "name": "Modern Fresh Bike",
  },
  {
    "facet_key": "color",
    "facet_value_id": "yellow",
    "fk_id": 1,
    "fv_id": 28,
    "id": 90,
    "name": "Rustic Plastic Computer",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reintermediate",
    "fk_id": 2,
    "fv_id": 62,
    "id": 90,
    "name": "Rustic Plastic Computer",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "seize",
    "fk_id": 2,
    "fv_id": 63,
    "id": 90,
    "name": "Rustic Plastic Computer",
  },
  {
    "facet_key": "color",
    "facet_value_id": "azure",
    "fk_id": 1,
    "fv_id": 29,
    "id": 91,
    "name": "Bespoke Metal Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "seize",
    "fk_id": 2,
    "fv_id": 63,
    "id": 91,
    "name": "Bespoke Metal Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "recontextualize",
    "fk_id": 2,
    "fv_id": 64,
    "id": 91,
    "name": "Bespoke Metal Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "gold",
    "fk_id": 1,
    "fv_id": 30,
    "id": 92,
    "name": "Bespoke Wooden Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "recontextualize",
    "fk_id": 2,
    "fv_id": 64,
    "id": 92,
    "name": "Bespoke Wooden Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "unleash",
    "fk_id": 2,
    "fv_id": 65,
    "id": 92,
    "name": "Bespoke Wooden Hat",
  },
  {
    "facet_key": "color",
    "facet_value_id": "teal",
    "fk_id": 1,
    "fv_id": 31,
    "id": 93,
    "name": "Fantastic Rubber Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "unleash",
    "fk_id": 2,
    "fv_id": 65,
    "id": 93,
    "name": "Fantastic Rubber Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "utilize",
    "fk_id": 2,
    "fv_id": 66,
    "id": 93,
    "name": "Fantastic Rubber Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "magenta",
    "fk_id": 1,
    "fv_id": 1,
    "id": 94,
    "name": "Bespoke Bronze Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "utilize",
    "fk_id": 2,
    "fv_id": 66,
    "id": 94,
    "name": "Bespoke Bronze Bike",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "orchestrate",
    "fk_id": 2,
    "fv_id": 67,
    "id": 94,
    "name": "Bespoke Bronze Bike",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lime",
    "fk_id": 1,
    "fv_id": 2,
    "id": 95,
    "name": "Intelligent Wooden Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "orchestrate",
    "fk_id": 2,
    "fv_id": 67,
    "id": 95,
    "name": "Intelligent Wooden Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "optimize",
    "fk_id": 2,
    "fv_id": 68,
    "id": 95,
    "name": "Intelligent Wooden Bacon",
  },
  {
    "facet_key": "color",
    "facet_value_id": "black",
    "fk_id": 1,
    "fv_id": 3,
    "id": 96,
    "name": "Rustic Concrete Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "optimize",
    "fk_id": 2,
    "fv_id": 68,
    "id": 96,
    "name": "Rustic Concrete Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "envisioneer",
    "fk_id": 2,
    "fv_id": 69,
    "id": 96,
    "name": "Rustic Concrete Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "violet",
    "fk_id": 1,
    "fv_id": 4,
    "id": 97,
    "name": "Modern Metal Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "envisioneer",
    "fk_id": 2,
    "fv_id": 69,
    "id": 97,
    "name": "Modern Metal Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "e-enable",
    "fk_id": 2,
    "fv_id": 70,
    "id": 97,
    "name": "Modern Metal Pants",
  },
  {
    "facet_key": "color",
    "facet_value_id": "white",
    "fk_id": 1,
    "fv_id": 5,
    "id": 98,
    "name": "Small Metal Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "e-enable",
    "fk_id": 2,
    "fv_id": 70,
    "id": 98,
    "name": "Small Metal Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "matrix",
    "fk_id": 2,
    "fv_id": 71,
    "id": 98,
    "name": "Small Metal Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "salmon",
    "fk_id": 1,
    "fv_id": 6,
    "id": 99,
    "name": "Modern Frozen Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "matrix",
    "fk_id": 2,
    "fv_id": 71,
    "id": 99,
    "name": "Modern Frozen Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "syndicate",
    "fk_id": 2,
    "fv_id": 72,
    "id": 99,
    "name": "Modern Frozen Keyboard",
  },
  {
    "facet_key": "color",
    "facet_value_id": "tan",
    "fk_id": 1,
    "fv_id": 7,
    "id": 100,
    "name": "Handmade Wooden Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "syndicate",
    "fk_id": 2,
    "fv_id": 72,
    "id": 100,
    "name": "Handmade Wooden Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "brand",
    "fk_id": 2,
    "fv_id": 73,
    "id": 100,
    "name": "Handmade Wooden Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "indigo",
    "fk_id": 1,
    "fv_id": 8,
    "id": 101,
    "name": "Tasty Cotton Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "brand",
    "fk_id": 2,
    "fv_id": 73,
    "id": 101,
    "name": "Tasty Cotton Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transform",
    "fk_id": 2,
    "fv_id": 74,
    "id": 101,
    "name": "Tasty Cotton Keyboard",
  },
  {
    "facet_key": "color",
    "facet_value_id": "silver",
    "fk_id": 1,
    "fv_id": 9,
    "id": 102,
    "name": "Unbranded Cotton Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transform",
    "fk_id": 2,
    "fv_id": 74,
    "id": 102,
    "name": "Unbranded Cotton Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "whiteboard",
    "fk_id": 2,
    "fv_id": 75,
    "id": 102,
    "name": "Unbranded Cotton Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "maroon",
    "fk_id": 1,
    "fv_id": 10,
    "id": 103,
    "name": "Handcrafted Soft Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "whiteboard",
    "fk_id": 2,
    "fv_id": 75,
    "id": 103,
    "name": "Handcrafted Soft Shoes",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "exploit",
    "fk_id": 2,
    "fv_id": 76,
    "id": 103,
    "name": "Handcrafted Soft Shoes",
  },
  {
    "facet_key": "color",
    "facet_value_id": "turquoise",
    "fk_id": 1,
    "fv_id": 11,
    "id": 104,
    "name": "Small Plastic Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "exploit",
    "fk_id": 2,
    "fv_id": 76,
    "id": 104,
    "name": "Small Plastic Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "cultivate",
    "fk_id": 2,
    "fv_id": 77,
    "id": 104,
    "name": "Small Plastic Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "purple",
    "fk_id": 1,
    "fv_id": 12,
    "id": 105,
    "name": "Intelligent Rubber Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "cultivate",
    "fk_id": 2,
    "fv_id": 77,
    "id": 105,
    "name": "Intelligent Rubber Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incentivize",
    "fk_id": 2,
    "fv_id": 78,
    "id": 105,
    "name": "Intelligent Rubber Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "pink",
    "fk_id": 1,
    "fv_id": 13,
    "id": 106,
    "name": "Elegant Fresh Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incentivize",
    "fk_id": 2,
    "fv_id": 78,
    "id": 106,
    "name": "Elegant Fresh Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "embrace",
    "fk_id": 2,
    "fv_id": 79,
    "id": 106,
    "name": "Elegant Fresh Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orchid",
    "fk_id": 1,
    "fv_id": 14,
    "id": 107,
    "name": "Rustic Soft Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "embrace",
    "fk_id": 2,
    "fv_id": 79,
    "id": 107,
    "name": "Rustic Soft Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "revolutionize",
    "fk_id": 2,
    "fv_id": 80,
    "id": 107,
    "name": "Rustic Soft Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "green",
    "fk_id": 1,
    "fv_id": 15,
    "id": 108,
    "name": "Practical Metal Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "revolutionize",
    "fk_id": 2,
    "fv_id": 80,
    "id": 108,
    "name": "Practical Metal Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "extend",
    "fk_id": 2,
    "fv_id": 81,
    "id": 108,
    "name": "Practical Metal Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "plum",
    "fk_id": 1,
    "fv_id": 16,
    "id": 109,
    "name": "Ergonomic Plastic Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "extend",
    "fk_id": 2,
    "fv_id": 81,
    "id": 109,
    "name": "Ergonomic Plastic Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "morph",
    "fk_id": 2,
    "fv_id": 82,
    "id": 109,
    "name": "Ergonomic Plastic Ball",
  },
  {
    "facet_key": "color",
    "facet_value_id": "mint green",
    "fk_id": 1,
    "fv_id": 17,
    "id": 110,
    "name": "Intelligent Steel Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "morph",
    "fk_id": 2,
    "fv_id": 82,
    "id": 110,
    "name": "Intelligent Steel Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deliver",
    "fk_id": 2,
    "fv_id": 83,
    "id": 110,
    "name": "Intelligent Steel Sausages",
  },
  {
    "facet_key": "color",
    "facet_value_id": "blue",
    "fk_id": 1,
    "fv_id": 18,
    "id": 111,
    "name": "Modern Fresh Table",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deliver",
    "fk_id": 2,
    "fv_id": 83,
    "id": 111,
    "name": "Modern Fresh Table",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "implement",
    "fk_id": 2,
    "fv_id": 84,
    "id": 111,
    "name": "Modern Fresh Table",
  },
  {
    "facet_key": "color",
    "facet_value_id": "sky blue",
    "fk_id": 1,
    "fv_id": 19,
    "id": 112,
    "name": "Unbranded Fresh Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "implement",
    "fk_id": 2,
    "fv_id": 84,
    "id": 112,
    "name": "Unbranded Fresh Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transition",
    "fk_id": 2,
    "fv_id": 85,
    "id": 112,
    "name": "Unbranded Fresh Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orange",
    "fk_id": 1,
    "fv_id": 20,
    "id": 113,
    "name": "Bespoke Fresh Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "transition",
    "fk_id": 2,
    "fv_id": 85,
    "id": 113,
    "name": "Bespoke Fresh Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reinvent",
    "fk_id": 2,
    "fv_id": 86,
    "id": 113,
    "name": "Bespoke Fresh Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "fuchsia",
    "fk_id": 1,
    "fv_id": 21,
    "id": 114,
    "name": "Tasty Bronze Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reinvent",
    "fk_id": 2,
    "fv_id": 86,
    "id": 114,
    "name": "Tasty Bronze Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "aggregate",
    "fk_id": 2,
    "fv_id": 87,
    "id": 114,
    "name": "Tasty Bronze Salad",
  },
  {
    "facet_key": "color",
    "facet_value_id": "grey",
    "fk_id": 1,
    "fv_id": 22,
    "id": 115,
    "name": "Awesome Frozen Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "aggregate",
    "fk_id": 2,
    "fv_id": 87,
    "id": 115,
    "name": "Awesome Frozen Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "iterate",
    "fk_id": 2,
    "fv_id": 88,
    "id": 115,
    "name": "Awesome Frozen Chair",
  },
  {
    "facet_key": "color",
    "facet_value_id": "olive",
    "fk_id": 1,
    "fv_id": 23,
    "id": 116,
    "name": "Rustic Metal Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "iterate",
    "fk_id": 2,
    "fv_id": 88,
    "id": 116,
    "name": "Rustic Metal Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "integrate",
    "fk_id": 2,
    "fv_id": 89,
    "id": 116,
    "name": "Rustic Metal Salad",
  },
  {
    "facet_key": "color",
    "facet_value_id": "ivory",
    "fk_id": 1,
    "fv_id": 24,
    "id": 117,
    "name": "Awesome Granite Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "integrate",
    "fk_id": 2,
    "fv_id": 89,
    "id": 117,
    "name": "Awesome Granite Bacon",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engineer",
    "fk_id": 2,
    "fv_id": 90,
    "id": 117,
    "name": "Awesome Granite Bacon",
  },
  {
    "facet_key": "color",
    "facet_value_id": "red",
    "fk_id": 1,
    "fv_id": 25,
    "id": 118,
    "name": "Practical Soft Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engineer",
    "fk_id": 2,
    "fv_id": 90,
    "id": 118,
    "name": "Practical Soft Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "visualize",
    "fk_id": 2,
    "fv_id": 32,
    "id": 118,
    "name": "Practical Soft Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "cyan",
    "fk_id": 1,
    "fv_id": 26,
    "id": 119,
    "name": "Tasty Wooden Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "visualize",
    "fk_id": 2,
    "fv_id": 32,
    "id": 119,
    "name": "Tasty Wooden Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "repurpose",
    "fk_id": 2,
    "fv_id": 33,
    "id": 119,
    "name": "Tasty Wooden Ball",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lavender",
    "fk_id": 1,
    "fv_id": 27,
    "id": 120,
    "name": "Awesome Frozen Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "repurpose",
    "fk_id": 2,
    "fv_id": 33,
    "id": 120,
    "name": "Awesome Frozen Salad",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "empower",
    "fk_id": 2,
    "fv_id": 34,
    "id": 120,
    "name": "Awesome Frozen Salad",
  },
  {
    "facet_key": "color",
    "facet_value_id": "yellow",
    "fk_id": 1,
    "fv_id": 28,
    "id": 121,
    "name": "Fantastic Soft Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "empower",
    "fk_id": 2,
    "fv_id": 34,
    "id": 121,
    "name": "Fantastic Soft Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "strategize",
    "fk_id": 2,
    "fv_id": 35,
    "id": 121,
    "name": "Fantastic Soft Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "azure",
    "fk_id": 1,
    "fv_id": 29,
    "id": 122,
    "name": "Electronic Bronze Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "strategize",
    "fk_id": 2,
    "fv_id": 35,
    "id": 122,
    "name": "Electronic Bronze Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "architect",
    "fk_id": 2,
    "fv_id": 36,
    "id": 122,
    "name": "Electronic Bronze Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "gold",
    "fk_id": 1,
    "fv_id": 30,
    "id": 123,
    "name": "Intelligent Concrete Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "architect",
    "fk_id": 2,
    "fv_id": 36,
    "id": 123,
    "name": "Intelligent Concrete Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "mesh",
    "fk_id": 2,
    "fv_id": 37,
    "id": 123,
    "name": "Intelligent Concrete Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "teal",
    "fk_id": 1,
    "fv_id": 31,
    "id": 124,
    "name": "Awesome Bronze Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "mesh",
    "fk_id": 2,
    "fv_id": 37,
    "id": 124,
    "name": "Awesome Bronze Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "innovate",
    "fk_id": 2,
    "fv_id": 38,
    "id": 124,
    "name": "Awesome Bronze Hat",
  },
  {
    "facet_key": "color",
    "facet_value_id": "magenta",
    "fk_id": 1,
    "fv_id": 1,
    "id": 125,
    "name": "Gorgeous Wooden Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "innovate",
    "fk_id": 2,
    "fv_id": 38,
    "id": 125,
    "name": "Gorgeous Wooden Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "target",
    "fk_id": 2,
    "fv_id": 39,
    "id": 125,
    "name": "Gorgeous Wooden Chair",
  },
  {
    "facet_key": "color",
    "facet_value_id": "lime",
    "fk_id": 1,
    "fv_id": 2,
    "id": 126,
    "name": "Unbranded Plastic Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "target",
    "fk_id": 2,
    "fv_id": 39,
    "id": 126,
    "name": "Unbranded Plastic Shirt",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "drive",
    "fk_id": 2,
    "fv_id": 40,
    "id": 126,
    "name": "Unbranded Plastic Shirt",
  },
  {
    "facet_key": "color",
    "facet_value_id": "black",
    "fk_id": 1,
    "fv_id": 3,
    "id": 127,
    "name": "Practical Bronze Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "drive",
    "fk_id": 2,
    "fv_id": 40,
    "id": 127,
    "name": "Practical Bronze Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "redefine",
    "fk_id": 2,
    "fv_id": 41,
    "id": 127,
    "name": "Practical Bronze Pizza",
  },
  {
    "facet_key": "color",
    "facet_value_id": "violet",
    "fk_id": 1,
    "fv_id": 4,
    "id": 128,
    "name": "Tasty Cotton Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "redefine",
    "fk_id": 2,
    "fv_id": 41,
    "id": 128,
    "name": "Tasty Cotton Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synergize",
    "fk_id": 2,
    "fv_id": 42,
    "id": 128,
    "name": "Tasty Cotton Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "white",
    "fk_id": 1,
    "fv_id": 5,
    "id": 129,
    "name": "Licensed Plastic Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synergize",
    "fk_id": 2,
    "fv_id": 42,
    "id": 129,
    "name": "Licensed Plastic Pizza",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incubate",
    "fk_id": 2,
    "fv_id": 43,
    "id": 129,
    "name": "Licensed Plastic Pizza",
  },
  {
    "facet_key": "color",
    "facet_value_id": "salmon",
    "fk_id": 1,
    "fv_id": 6,
    "id": 130,
    "name": "Oriental Rubber Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "incubate",
    "fk_id": 2,
    "fv_id": 43,
    "id": 130,
    "name": "Oriental Rubber Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "grow",
    "fk_id": 2,
    "fv_id": 44,
    "id": 130,
    "name": "Oriental Rubber Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "tan",
    "fk_id": 1,
    "fv_id": 7,
    "id": 131,
    "name": "Recycled Bronze Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "grow",
    "fk_id": 2,
    "fv_id": 44,
    "id": 131,
    "name": "Recycled Bronze Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enable",
    "fk_id": 2,
    "fv_id": 45,
    "id": 131,
    "name": "Recycled Bronze Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "indigo",
    "fk_id": 1,
    "fv_id": 8,
    "id": 132,
    "name": "Gorgeous Frozen Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enable",
    "fk_id": 2,
    "fv_id": 45,
    "id": 132,
    "name": "Gorgeous Frozen Cheese",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "disintermediate",
    "fk_id": 2,
    "fv_id": 46,
    "id": 132,
    "name": "Gorgeous Frozen Cheese",
  },
  {
    "facet_key": "color",
    "facet_value_id": "silver",
    "fk_id": 1,
    "fv_id": 9,
    "id": 133,
    "name": "Generic Bronze Table",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "disintermediate",
    "fk_id": 2,
    "fv_id": 46,
    "id": 133,
    "name": "Generic Bronze Table",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "harness",
    "fk_id": 2,
    "fv_id": 47,
    "id": 133,
    "name": "Generic Bronze Table",
  },
  {
    "facet_key": "color",
    "facet_value_id": "maroon",
    "fk_id": 1,
    "fv_id": 10,
    "id": 134,
    "name": "Small Fresh Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "harness",
    "fk_id": 2,
    "fv_id": 47,
    "id": 134,
    "name": "Small Fresh Chips",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "benchmark",
    "fk_id": 2,
    "fv_id": 48,
    "id": 134,
    "name": "Small Fresh Chips",
  },
  {
    "facet_key": "color",
    "facet_value_id": "turquoise",
    "fk_id": 1,
    "fv_id": 11,
    "id": 135,
    "name": "Practical Plastic Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "benchmark",
    "fk_id": 2,
    "fv_id": 48,
    "id": 135,
    "name": "Practical Plastic Ball",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "monetize",
    "fk_id": 2,
    "fv_id": 49,
    "id": 135,
    "name": "Practical Plastic Ball",
  },
  {
    "facet_key": "color",
    "facet_value_id": "purple",
    "fk_id": 1,
    "fv_id": 12,
    "id": 136,
    "name": "Small Metal Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "monetize",
    "fk_id": 2,
    "fv_id": 49,
    "id": 136,
    "name": "Small Metal Car",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deploy",
    "fk_id": 2,
    "fv_id": 50,
    "id": 136,
    "name": "Small Metal Car",
  },
  {
    "facet_key": "color",
    "facet_value_id": "pink",
    "fk_id": 1,
    "fv_id": 13,
    "id": 137,
    "name": "Refined Metal Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "deploy",
    "fk_id": 2,
    "fv_id": 50,
    "id": 137,
    "name": "Refined Metal Sausages",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enhance",
    "fk_id": 2,
    "fv_id": 51,
    "id": 137,
    "name": "Refined Metal Sausages",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orchid",
    "fk_id": 1,
    "fv_id": 14,
    "id": 138,
    "name": "Small Wooden Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "enhance",
    "fk_id": 2,
    "fv_id": 51,
    "id": 138,
    "name": "Small Wooden Towels",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "streamline",
    "fk_id": 2,
    "fv_id": 52,
    "id": 138,
    "name": "Small Wooden Towels",
  },
  {
    "facet_key": "color",
    "facet_value_id": "green",
    "fk_id": 1,
    "fv_id": 15,
    "id": 139,
    "name": "Intelligent Concrete Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "streamline",
    "fk_id": 2,
    "fv_id": 52,
    "id": 139,
    "name": "Intelligent Concrete Hat",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engage",
    "fk_id": 2,
    "fv_id": 53,
    "id": 139,
    "name": "Intelligent Concrete Hat",
  },
  {
    "facet_key": "color",
    "facet_value_id": "plum",
    "fk_id": 1,
    "fv_id": 16,
    "id": 140,
    "name": "Licensed Fresh Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "engage",
    "fk_id": 2,
    "fv_id": 53,
    "id": 140,
    "name": "Licensed Fresh Mouse",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "scale",
    "fk_id": 2,
    "fv_id": 54,
    "id": 140,
    "name": "Licensed Fresh Mouse",
  },
  {
    "facet_key": "color",
    "facet_value_id": "mint green",
    "fk_id": 1,
    "fv_id": 17,
    "id": 141,
    "name": "Gorgeous Wooden Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "scale",
    "fk_id": 2,
    "fv_id": 54,
    "id": 141,
    "name": "Gorgeous Wooden Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "leverage",
    "fk_id": 2,
    "fv_id": 55,
    "id": 141,
    "name": "Gorgeous Wooden Tuna",
  },
  {
    "facet_key": "color",
    "facet_value_id": "blue",
    "fk_id": 1,
    "fv_id": 18,
    "id": 142,
    "name": "Refined Soft Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "leverage",
    "fk_id": 2,
    "fv_id": 55,
    "id": 142,
    "name": "Refined Soft Pants",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "evolve",
    "fk_id": 2,
    "fv_id": 56,
    "id": 142,
    "name": "Refined Soft Pants",
  },
  {
    "facet_key": "color",
    "facet_value_id": "sky blue",
    "fk_id": 1,
    "fv_id": 19,
    "id": 143,
    "name": "Small Concrete Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "evolve",
    "fk_id": 2,
    "fv_id": 56,
    "id": 143,
    "name": "Small Concrete Keyboard",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synthesize",
    "fk_id": 2,
    "fv_id": 57,
    "id": 143,
    "name": "Small Concrete Keyboard",
  },
  {
    "facet_key": "color",
    "facet_value_id": "orange",
    "fk_id": 1,
    "fv_id": 20,
    "id": 144,
    "name": "Modern Fresh Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "synthesize",
    "fk_id": 2,
    "fv_id": 57,
    "id": 144,
    "name": "Modern Fresh Gloves",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "expedite",
    "fk_id": 2,
    "fv_id": 58,
    "id": 144,
    "name": "Modern Fresh Gloves",
  },
  {
    "facet_key": "color",
    "facet_value_id": "fuchsia",
    "fk_id": 1,
    "fv_id": 21,
    "id": 145,
    "name": "Luxurious Fresh Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "expedite",
    "fk_id": 2,
    "fv_id": 58,
    "id": 145,
    "name": "Luxurious Fresh Soap",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "generate",
    "fk_id": 2,
    "fv_id": 59,
    "id": 145,
    "name": "Luxurious Fresh Soap",
  },
  {
    "facet_key": "color",
    "facet_value_id": "grey",
    "fk_id": 1,
    "fv_id": 22,
    "id": 146,
    "name": "Unbranded Rubber Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "generate",
    "fk_id": 2,
    "fv_id": 59,
    "id": 146,
    "name": "Unbranded Rubber Chicken",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "maximize",
    "fk_id": 2,
    "fv_id": 60,
    "id": 146,
    "name": "Unbranded Rubber Chicken",
  },
  {
    "facet_key": "color",
    "facet_value_id": "olive",
    "fk_id": 1,
    "fv_id": 23,
    "id": 147,
    "name": "Luxurious Metal Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "maximize",
    "fk_id": 2,
    "fv_id": 60,
    "id": 147,
    "name": "Luxurious Metal Chair",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "facilitate",
    "fk_id": 2,
    "fv_id": 61,
    "id": 147,
    "name": "Luxurious Metal Chair",
  },
  {
    "facet_key": "color",
    "facet_value_id": "ivory",
    "fk_id": 1,
    "fv_id": 24,
    "id": 148,
    "name": "Handmade Soft Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "facilitate",
    "fk_id": 2,
    "fv_id": 61,
    "id": 148,
    "name": "Handmade Soft Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reintermediate",
    "fk_id": 2,
    "fv_id": 62,
    "id": 148,
    "name": "Handmade Soft Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "red",
    "fk_id": 1,
    "fv_id": 25,
    "id": 149,
    "name": "Luxurious Plastic Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "reintermediate",
    "fk_id": 2,
    "fv_id": 62,
    "id": 149,
    "name": "Luxurious Plastic Fish",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "seize",
    "fk_id": 2,
    "fv_id": 63,
    "id": 149,
    "name": "Luxurious Plastic Fish",
  },
  {
    "facet_key": "color",
    "facet_value_id": "cyan",
    "fk_id": 1,
    "fv_id": 26,
    "id": 150,
    "name": "Handmade Rubber Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "seize",
    "fk_id": 2,
    "fv_id": 63,
    "id": 150,
    "name": "Handmade Rubber Tuna",
  },
  {
    "facet_key": "tag",
    "facet_value_id": "recontextualize",
    "fk_id": 2,
    "fv_id": 64,
    "id": 150,
    "name": "Handmade Rubber Tuna",
  },
]
`;

exports[`requestHandler should handle highlighting 1`] = `
{
  "_highlightResult": {
    "description": {
      "fullyHighlighted": false,
      "matchLevel": "full",
      "matchedWords": [],
      "value": "The slim & simple Maple Gaming __ais-highlight__Keyboard__/ais-highlight__ from Dev Byte comes with a sleek body and",
    },
    "name": {
      "fullyHighlighted": false,
      "matchLevel": "full",
      "matchedWords": [],
      "value": "__ais-highlight__Bespoke__/ais-highlight__ Granite __ais-highlight__Keyboard__/ais-highlight__",
    },
  },
  "brand": "Powlowski, Brekke and Hamill",
  "description": "The slim & simple Maple Gaming Keyboard from Dev Byte comes with a sleek body and 7- Color RGB LED Back-lighting for smart functionality",
  "id": 20,
  "name": "Bespoke Granite Keyboard",
  "price": 14,
}
`;

exports[`requestHandler should return facets on request with empty query 1`] = `
{
  "brand": {
    "Abshire - Carroll": 2,
    "Hammes Group": 2,
    "Hayes - Kutch": 2,
    "Hickle - Bins": 2,
    "Kessler Inc": 2,
    "Kiehn Inc": 2,
    "Langworth, Kuvalis and Kohler": 2,
    "Littel, Borer and Bergstrom": 2,
    "Muller - Sporer": 2,
    "Smitham Group": 2,
  },
  "price": {
    "11": 6,
    "12": 7,
    "13": 10,
    "14": 6,
    "19": 5,
    "22": 8,
    "24": 9,
    "33": 7,
    "38": 7,
    "39": 6,
  },
}
`;

exports[`requestHandler should return facets on request with empty query 2`] = `
{
  "price": {
    "avg": 24.5933,
    "max": 40,
    "min": 10,
    "sum": 3689,
  },
}
`;

exports[`requestHandler should return results 1`] = `
{
  "brand": "Powlowski, Brekke and Hamill",
  "description": "The slim & simple Maple Gaming Keyboard from Dev Byte comes with a sleek body and 7- Color RGB LED Back-lighting for smart functionality",
  "id": 20,
  "name": "Bespoke Granite Keyboard",
  "price": 14,
}
`;
